BDLCompilerSource/gen/BoardParser.java
// Generated from C:/dev/BDL-Board-Description-Language/CompilerSource/src\Board.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BoardParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, INT=37, BOOL=38, EXPLICIT=39, 
		ID=40, WS=41;
	public static final int
		RULE_game = 0, RULE_ruleSet = 1, RULE_ruleDef = 2, RULE_pieceDescriptions = 3, 
		RULE_pieceDescription = 4, RULE_moves = 5, RULE_move = 6, RULE_moveFunction = 7, 
		RULE_kills = 8, RULE_descriptionModifier = 9, RULE_endReachedAlternatives = 10, 
		RULE_initialPiecePositions = 11, RULE_initialPiecePosition = 12, RULE_positions = 13, 
		RULE_positionModifier = 14, RULE_invariantList = 15, RULE_invariant = 16, 
		RULE_finish = 17, RULE_finishingRules = 18, RULE_vector = 19, RULE_interval = 20, 
		RULE_explicitParsed = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"game", "ruleSet", "ruleDef", "pieceDescriptions", "pieceDescription", 
			"moves", "move", "moveFunction", "kills", "descriptionModifier", "endReachedAlternatives", 
			"initialPiecePositions", "initialPiecePosition", "positions", "positionModifier", 
			"invariantList", "invariant", "finish", "finishingRules", "vector", "interval", 
			"explicitParsed"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'rules'", "'{'", "'}'", "'first_player'", "':'", "'width'", "'height'", 
			"'coloring'", "'alternate'", "'player_change'", "'pieces'", "'moves'", 
			"'horizontal'", "'('", "','", "')'", "'vertical'", "'diagonal'", "'kills'", 
			"'can_jump'", "'mirrored'", "'on_end_reached'", "'spawn'", "'initial_piece_position'", 
			"'positions'", "'owner'", "'invariants'", "'cant_risk'", "'protect_piece'", 
			"'pawn_movement'", "'finish'", "'no_moves_available'", "'x'", "'y'", 
			"'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "INT", "BOOL", "EXPLICIT", "ID", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Board.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BoardParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class GameContext extends ParserRuleContext {
		public RuleSetContext ruleSet() {
			return getRuleContext(RuleSetContext.class,0);
		}
		public PieceDescriptionsContext pieceDescriptions() {
			return getRuleContext(PieceDescriptionsContext.class,0);
		}
		public InitialPiecePositionsContext initialPiecePositions() {
			return getRuleContext(InitialPiecePositionsContext.class,0);
		}
		public InvariantListContext invariantList() {
			return getRuleContext(InvariantListContext.class,0);
		}
		public FinishContext finish() {
			return getRuleContext(FinishContext.class,0);
		}
		public TerminalNode EOF() { return getToken(BoardParser.EOF, 0); }
		public GameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_game; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).enterGame(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).exitGame(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BoardVisitor ) return ((BoardVisitor<? extends T>)visitor).visitGame(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GameContext game() throws RecognitionException {
		GameContext _localctx = new GameContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_game);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			ruleSet();
			setState(45);
			pieceDescriptions();
			setState(46);
			initialPiecePositions();
			setState(47);
			invariantList();
			setState(48);
			finish();
			setState(49);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleSetContext extends ParserRuleContext {
		public List<RuleDefContext> ruleDef() {
			return getRuleContexts(RuleDefContext.class);
		}
		public RuleDefContext ruleDef(int i) {
			return getRuleContext(RuleDefContext.class,i);
		}
		public RuleSetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleSet; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).enterRuleSet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).exitRuleSet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BoardVisitor ) return ((BoardVisitor<? extends T>)visitor).visitRuleSet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RuleSetContext ruleSet() throws RecognitionException {
		RuleSetContext _localctx = new RuleSetContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_ruleSet);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(T__0);
			setState(52);
			match(T__1);
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__9))) != 0)) {
				{
				{
				setState(53);
				ruleDef();
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(59);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleDefContext extends ParserRuleContext {
		public RuleDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleDef; }
	 
		public RuleDefContext() { }
		public void copyFrom(RuleDefContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class RulePropContext extends RuleDefContext {
		public TerminalNode INT() { return getToken(BoardParser.INT, 0); }
		public RulePropContext(RuleDefContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).enterRuleProp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).exitRuleProp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BoardVisitor ) return ((BoardVisitor<? extends T>)visitor).visitRuleProp(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RuleColoringContext extends RuleDefContext {
		public ExplicitParsedContext explicitParsed() {
			return getRuleContext(ExplicitParsedContext.class,0);
		}
		public RuleColoringContext(RuleDefContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).enterRuleColoring(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).exitRuleColoring(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BoardVisitor ) return ((BoardVisitor<? extends T>)visitor).visitRuleColoring(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RulePlayerChangeContext extends RuleDefContext {
		public ExplicitParsedContext explicitParsed() {
			return getRuleContext(ExplicitParsedContext.class,0);
		}
		public RulePlayerChangeContext(RuleDefContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).enterRulePlayerChange(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).exitRulePlayerChange(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BoardVisitor ) return ((BoardVisitor<? extends T>)visitor).visitRulePlayerChange(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RuleDefContext ruleDef() throws RecognitionException {
		RuleDefContext _localctx = new RuleDefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_ruleDef);
		try {
			setState(82);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				_localctx = new RulePropContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				match(T__3);
				setState(62);
				match(T__4);
				setState(63);
				match(INT);
				}
				break;
			case T__5:
				_localctx = new RulePropContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(64);
				match(T__5);
				setState(65);
				match(T__4);
				setState(66);
				match(INT);
				}
				break;
			case T__6:
				_localctx = new RulePropContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(67);
				match(T__6);
				setState(68);
				match(T__4);
				setState(69);
				match(INT);
				}
				break;
			case T__7:
				_localctx = new RuleColoringContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(70);
				match(T__7);
				setState(71);
				match(T__4);
				setState(74);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__8:
					{
					setState(72);
					match(T__8);
					}
					break;
				case EXPLICIT:
					{
					setState(73);
					explicitParsed();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case T__9:
				_localctx = new RulePlayerChangeContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(76);
				match(T__9);
				setState(77);
				match(T__4);
				setState(80);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__8:
					{
					setState(78);
					match(T__8);
					}
					break;
				case EXPLICIT:
					{
					setState(79);
					explicitParsed();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PieceDescriptionsContext extends ParserRuleContext {
		public List<PieceDescriptionContext> pieceDescription() {
			return getRuleContexts(PieceDescriptionContext.class);
		}
		public PieceDescriptionContext pieceDescription(int i) {
			return getRuleContext(PieceDescriptionContext.class,i);
		}
		public PieceDescriptionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pieceDescriptions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).enterPieceDescriptions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).exitPieceDescriptions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BoardVisitor ) return ((BoardVisitor<? extends T>)visitor).visitPieceDescriptions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PieceDescriptionsContext pieceDescriptions() throws RecognitionException {
		PieceDescriptionsContext _localctx = new PieceDescriptionsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_pieceDescriptions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(T__10);
			setState(85);
			match(T__1);
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==EXPLICIT || _la==ID) {
				{
				{
				setState(86);
				pieceDescription();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(92);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PieceDescriptionContext extends ParserRuleContext {
		public PieceDescriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pieceDescription; }
	 
		public PieceDescriptionContext() { }
		public void copyFrom(PieceDescriptionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PieceDescriptionExplicitContext extends PieceDescriptionContext {
		public ExplicitParsedContext explicitParsed() {
			return getRuleContext(ExplicitParsedContext.class,0);
		}
		public PieceDescriptionExplicitContext(PieceDescriptionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).enterPieceDescriptionExplicit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).exitPieceDescriptionExplicit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BoardVisitor ) return ((BoardVisitor<? extends T>)visitor).visitPieceDescriptionExplicit(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PieceIdPlusMovesContext extends PieceDescriptionContext {
		public TerminalNode ID() { return getToken(BoardParser.ID, 0); }
		public MovesContext moves() {
			return getRuleContext(MovesContext.class,0);
		}
		public List<DescriptionModifierContext> descriptionModifier() {
			return getRuleContexts(DescriptionModifierContext.class);
		}
		public DescriptionModifierContext descriptionModifier(int i) {
			return getRuleContext(DescriptionModifierContext.class,i);
		}
		public PieceIdPlusMovesContext(PieceDescriptionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).enterPieceIdPlusMoves(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).exitPieceIdPlusMoves(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BoardVisitor ) return ((BoardVisitor<? extends T>)visitor).visitPieceIdPlusMoves(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PieceDescriptionContext pieceDescription() throws RecognitionException {
		PieceDescriptionContext _localctx = new PieceDescriptionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_pieceDescription);
		int _la;
		try {
			setState(106);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				_localctx = new PieceIdPlusMovesContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(94);
				match(ID);
				setState(95);
				match(T__1);
				setState(96);
				moves();
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << EXPLICIT))) != 0)) {
					{
					{
					setState(97);
					descriptionModifier();
					}
					}
					setState(102);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(103);
				match(T__2);
				}
				break;
			case EXPLICIT:
				_localctx = new PieceDescriptionExplicitContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(105);
				explicitParsed();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MovesContext extends ParserRuleContext {
		public List<MoveContext> move() {
			return getRuleContexts(MoveContext.class);
		}
		public MoveContext move(int i) {
			return getRuleContext(MoveContext.class,i);
		}
		public MovesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moves; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).enterMoves(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).exitMoves(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BoardVisitor ) return ((BoardVisitor<? extends T>)visitor).visitMoves(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MovesContext moves() throws RecognitionException {
		MovesContext _localctx = new MovesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_moves);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(T__11);
			setState(109);
			match(T__1);
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__12) | (1L << T__16) | (1L << T__17) | (1L << T__32) | (1L << EXPLICIT))) != 0)) {
				{
				{
				setState(110);
				move();
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(116);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MoveContext extends ParserRuleContext {
		public MoveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_move; }
	 
		public MoveContext() { }
		public void copyFrom(MoveContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MoveExplicitContext extends MoveContext {
		public ExplicitParsedContext explicitParsed() {
			return getRuleContext(ExplicitParsedContext.class,0);
		}
		public MoveExplicitContext(MoveContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).enterMoveExplicit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).exitMoveExplicit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BoardVisitor ) return ((BoardVisitor<? extends T>)visitor).visitMoveExplicit(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MoveVectorContext extends MoveContext {
		public VectorContext vector() {
			return getRuleContext(VectorContext.class,0);
		}
		public KillsContext kills() {
			return getRuleContext(KillsContext.class,0);
		}
		public MoveVectorContext(MoveContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).enterMoveVector(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).exitMoveVector(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BoardVisitor ) return ((BoardVisitor<? extends T>)visitor).visitMoveVector(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MoveFunctionDescriptionContext extends MoveContext {
		public MoveFunctionContext moveFunction() {
			return getRuleContext(MoveFunctionContext.class,0);
		}
		public KillsContext kills() {
			return getRuleContext(KillsContext.class,0);
		}
		public MoveFunctionDescriptionContext(MoveContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).enterMoveFunctionDescription(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).exitMoveFunctionDescription(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BoardVisitor ) return ((BoardVisitor<? extends T>)visitor).visitMoveFunctionDescription(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MoveContext move() throws RecognitionException {
		MoveContext _localctx = new MoveContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_move);
		int _la;
		try {
			setState(127);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				_localctx = new MoveVectorContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				vector();
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__14 || _la==T__18) {
					{
					setState(119);
					kills();
					}
				}

				}
				break;
			case 2:
				_localctx = new MoveFunctionDescriptionContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				moveFunction();
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__14 || _la==T__18) {
					{
					setState(123);
					kills();
					}
				}

				}
				break;
			case 3:
				_localctx = new MoveExplicitContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(126);
				explicitParsed();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MoveFunctionContext extends ParserRuleContext {
		public MoveFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moveFunction; }
	 
		public MoveFunctionContext() { }
		public void copyFrom(MoveFunctionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MoveFunctionDiagonalContext extends MoveFunctionContext {
		public Token e1;
		public Token e2;
		public List<TerminalNode> INT() { return getTokens(BoardParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(BoardParser.INT, i);
		}
		public MoveFunctionDiagonalContext(MoveFunctionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).enterMoveFunctionDiagonal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).exitMoveFunctionDiagonal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BoardVisitor ) return ((BoardVisitor<? extends T>)visitor).visitMoveFunctionDiagonal(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MoveFunctionExplicitContext extends MoveFunctionContext {
		public ExplicitParsedContext explicitParsed() {
			return getRuleContext(ExplicitParsedContext.class,0);
		}
		public MoveFunctionExplicitContext(MoveFunctionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).enterMoveFunctionExplicit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).exitMoveFunctionExplicit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BoardVisitor ) return ((BoardVisitor<? extends T>)visitor).visitMoveFunctionExplicit(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MoveFunctionHorizontalContext extends MoveFunctionContext {
		public Token e1;
		public Token e2;
		public List<TerminalNode> INT() { return getTokens(BoardParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(BoardParser.INT, i);
		}
		public MoveFunctionHorizontalContext(MoveFunctionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).enterMoveFunctionHorizontal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).exitMoveFunctionHorizontal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BoardVisitor ) return ((BoardVisitor<? extends T>)visitor).visitMoveFunctionHorizontal(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MoveFunctionVerticalContext extends MoveFunctionContext {
		public Token e1;
		public Token e2;
		public List<TerminalNode> INT() { return getTokens(BoardParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(BoardParser.INT, i);
		}
		public MoveFunctionVerticalContext(MoveFunctionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).enterMoveFunctionVertical(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).exitMoveFunctionVertical(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BoardVisitor ) return ((BoardVisitor<? extends T>)visitor).visitMoveFunctionVertical(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MoveFunctionContext moveFunction() throws RecognitionException {
		MoveFunctionContext _localctx = new MoveFunctionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_moveFunction);
		int _la;
		try {
			setState(160);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__12:
				_localctx = new MoveFunctionHorizontalContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(129);
				match(T__12);
				setState(130);
				match(T__13);
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==INT) {
					{
					setState(131);
					((MoveFunctionHorizontalContext)_localctx).e1 = match(INT);
					}
				}

				setState(134);
				match(T__14);
				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==INT) {
					{
